Revert "base: Add unlinked ringtone and notification volumes"
This reverts commit 0cac57aac02812e2230e33a670d8396a00ac1828.