@@ -113,7 +113,6 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
     @UnsupportedAppUsage
     private final int mStreamType;
     private final int mMaxStreamVolume;
-    private final boolean mVoiceCapable;
     private boolean mAffectedByRingerMode;
     private boolean mNotificationOrRing;
     private final boolean mNotifAliasRing;
@@ -210,8 +209,6 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
             }
         }
         mDefaultUri = defaultUri;
-        mVoiceCapable = context.getResources().getBoolean(
-                com.android.internal.R.bool.config_voice_capable);
     }
 
     private boolean hasAudioProductStrategies() {
@@ -260,11 +257,6 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
         return stream == AudioManager.STREAM_MUSIC;
     }
 
-    private boolean isNotificationStreamLinked() {
-        return mVoiceCapable && Settings.Secure.getInt(mContext.getContentResolver(),
-                Settings.Secure.VOLUME_LINK_NOTIFICATION, 1) == 1;
-    }
-
     public void setSeekBar(SeekBar seekBar) {
         if (mSeekBar != null) {
             mSeekBar.setOnSeekBarChangeListener(null);
@@ -299,18 +291,12 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
             if (mNotifAliasRing || mStreamType == AudioManager.STREAM_RING
                     || (mStreamType == AudioManager.STREAM_NOTIFICATION && mMuted)) {
                 mSeekBar.setProgress(0, true);
-                mSeekBar.setEnabled(isSeekBarEnabled());
             }
         } else if (mMuted) {
             mSeekBar.setProgress(0, true);
         } else {
-            mSeekBar.setEnabled(isSeekBarEnabled());
             mSeekBar.setProgress(mLastProgress > -1 ? mLastProgress : mOriginalStreamVolume, true);
         }
-    }
-
-    private boolean isSeekBarEnabled() {
-        return !(mStreamType == AudioManager.STREAM_NOTIFICATION && isNotificationStreamLinked());
     }
 
     @Override
@@ -460,7 +446,7 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
     }
 
     public void onProgressChanged(SeekBar seekBar, int progress, boolean fromTouch) {
-        if (fromTouch && isSeekBarEnabled()) {
+        if (fromTouch) {
             postSetVolume(progress);
         }
         if (mCallback != null) {
@@ -567,8 +553,7 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
         }
 
         public void postUpdateSlider(int volume, int lastAudibleVolume, boolean mute) {
-            obtainMessage(UPDATE_SLIDER, volume, lastAudibleVolume, Boolean.valueOf(mute))
-                    .sendToTarget();
+            obtainMessage(UPDATE_SLIDER, volume, lastAudibleVolume, new Boolean(mute)).sendToTarget();
         }
     }
 
@@ -658,7 +643,7 @@ public class SeekBarVolumizer implements OnSeekBarChangeListener, Handler.Callba
         }
 
         private void updateVolumeSlider(int streamType, int streamValue) {
-            final boolean streamMatch = mNotifAliasRing && mNotificationOrRing && isNotificationStreamLinked()
+            final boolean streamMatch = mNotifAliasRing && mNotificationOrRing
                     ? isNotificationOrRing(streamType) : streamType == mStreamType;
             if (mSeekBar != null && streamMatch && streamValue != -1) {
                 final boolean muted = mAudioManager.isStreamMute(mStreamType)
